	PR c++/54653 	* parser.c (cp_parser_class_head): A partial specialization scope 	counts as a template. 	* pt.c (tsubst_template_parms): Handle template template parm parms. 	(tsubst_decl) [TEMPLATE_DECL]: Handle getting a template template 	argument back.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194249 138bc75d-0d04-0410-961f-82ee72b054a4